--- a/templates/admin/report.html
+++ b/templates/admin/report.html
@@ -136,7 +136,7 @@
                   </a>
                 </td>
                 <td class="print">
-                  <div class="button">
+                  <div class="buttonPrint">
                     <a href="#" onclick="return false" class="disabled"
                       ><i class="bx bx-printer" style="margin-right: 5px"></i
                       >Print</a
@@ -152,7 +152,7 @@
                   </a>
                 </td>
                 <td class="print">
-                  <div class="button">
+                  <div class="buttonPrint">
                     <a href="#" onclick="return false"
                       ><i class="bx bx-printer" style="margin-right: 5px"></i
                       >Print</a
