--- a/templates/admin/addStudent.html
+++ b/templates/admin/addStudent.html
@@ -88,7 +88,7 @@
 
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
-          <div class="recent-update box">
+          <div class="recent-update box input">
             <div class="title">Siswa</div>
             <div class="update-details">
               <table class="input">
@@ -98,7 +98,7 @@
                   <col span="1" style="width: 70%" />
                 </colgroup>
                 <tbody>
-                  <tr class="details">
+                  <tr class="details icon">
                     <td class="topic" rowspan="8">
                       <i
                         class="bx bx-user-circle"
@@ -153,7 +153,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="button">
+            <div class="buttonSave">
               <a
                 href="{% url 'student' %}"
                 onClick="alert('Data Siswa Berhasil Ditambahkan')"
