--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -231,6 +231,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
+        disable: "mobile",
         offset: 200,
         delay: 100,
         duration: 400,
