--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Login Page in HTML with CSS Code Example</title>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans"
