--- a/templates/user/editGrade.html
+++ b/templates/user/editGrade.html
@@ -76,7 +76,7 @@
 
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
-          <div class="recent-update box">
+          <div class="recent-update box input">
             <div class="title">Nilai</div>
             <div class="update-details">
               <table class="input">
@@ -86,7 +86,7 @@
                   <col span="1" style="width: 70%" />
                 </colgroup>
                 <tbody>
-                  <tr class="details">
+                  <tr class="details icon">
                     <td class="topic" rowspan="8">
                       <i
                         class="bx bxs-graduation"
@@ -141,7 +141,7 @@
                 </tbody>
               </table>
             </div>
-            <div class="button">
+            <div class="buttonSave">
               <a
                 href="{% url 'grade' %}"
                 onClick="alert('Nilai Berhasil Diubah'); resetInput();"
