--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -219,6 +219,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
+        disabled: "mobile",
         offset: 200,
         delay: 100,
         duration: 400,
