--- a/templates/admin/addTeacher.html
+++ b/templates/admin/addTeacher.html
@@ -1,9 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <title>Thearning-Rekapan nilai</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -20,7 +22,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="{% url 'admin' %}">
+          <a href="{% url 'dashboard' %}">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
@@ -89,6 +91,8 @@
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box input v2">
+              <form action="{% url 'addteacher' %}" method="POST">
+                  {% csrf_token %}
             <div class="title">Guru</div>
             <div class="update-details">
               <table class="input">
@@ -106,14 +110,36 @@
                       ></i>
                     </td>
                   </tr>
-                  <tr class="details">
-                    <td class="topic">Username</td>
+                  <tr>
+                    <td class="topic">User ID</td>
                     <td>
                       <input
                         type="text"
-                        name="username"
+                        name="uid"
+                        id="nip"
+                        placeholder="NIP"
+                      />
+                    </td>
+                  </tr>
+                  <tr class="details">
+                    <td class="topic">Nama Pertama</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="first_name"
                         id="username"
-                        placeholder="Nama"
+                        placeholder="Nama Pertama"
+                      />
+                    </td>
+                  </tr>
+                <tr class="details">
+                    <td class="topic">Nama Terakhir</td>
+                    <td>
+                      <input
+                        type="text"
+                        name="last_name"
+                        id="username"
+                        placeholder="Nama Terakhir"
                       />
                     </td>
                   </tr>
@@ -129,13 +155,13 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="topic">NIP</td>
+                    <td class="topic">Email</td>
                     <td>
                       <input
-                        type="text"
-                        name="nip"
-                        id="nip"
-                        placeholder="NIP"
+                        type="email"
+                        name="email"
+                        id="email"
+                        placeholder="Email"
                       />
                     </td>
                   </tr>
@@ -172,27 +198,13 @@
                       />
                     </td>
                   </tr>
-                  <tr>
-                    <td class="topic">Kelas</td>
-                    <td>
-                      <input
-                        type="text"
-                        name="class"
-                        id="class"
-                        placeholder="Kelas"
-                      />
-                    </td>
-                  </tr>
                 </tbody>
               </table>
             </div>
-            <div class="buttonSave">
-              <a
-                href="{% url 'teacher' %}"
-                onClick="alert('Data Guru Berhasil Ditambahkan')"
-                ><i class="bx bxs-file-plus" style="margin: 5px"></i>Tambah</a
-              >
-            </div>
+            <button class="buttonSave" type="submit">
+                <p>Submit</p>
+            </button>
+              </form>
           </div>
         </div>
       </div>
