--- a/templates/admin/profile.html
+++ b/templates/admin/profile.html
@@ -1,9 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <title>Thearning-Rekapan nilai</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -20,7 +22,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="{% url 'admin' %}">
+          <a href="{% url 'dashboard' %}">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
