Implement teacher creation view for the new template

--- a/templates/admin/addTeacher.html
+++ b/templates/admin/addTeacher.html
@@ -177,17 +177,6 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="topic">Level</td>
-                    <td>
-                      <input
-                        type="text"
-                        name="level"
-                        id="level"
-                        placeholder="Level"
-                      />
-                    </td>
-                  </tr>
-                  <tr>
                     <td class="topic">Mata Pelajaran</td>
                     <td>
                       <input
@@ -201,9 +190,9 @@
                 </tbody>
               </table>
             </div>
-            <button class="buttonSave" type="submit">
-                <p>Submit</p>
-            </button>
+            <div class="buttonSave">
+                <button type="submit"><a>Submit</a></button>
+            </div>
               </form>
           </div>
         </div>
