--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -92,7 +92,7 @@
           <div class="box" data-aos="fade-right">
             <div class="right-side">
               <div class="box-topic">Guru</div>
-              <div class="number">100</div>
+              <div class="number">{{ teacher_count }}</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terkahir Diedit</span>
